// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link Default <bolt-link> w/o Shadow DOM renders 1`] = `
<div>
  <bolt-link url="http://pega.com"
             no-shadow
  >
    <a href="http://pega.com"
       class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
       target="_self"
    >
      <slot name="before">
      </slot>
      <span class="c-bolt-link__text">
        This is a link
      </span>
      <slot name="after">
      </slot>
    </a>
  </bolt-link>
</div>
`;

exports[`link Default <bolt-link> w/o Shadow DOM renders 3`] = `
<div
  style=""
>
  <bolt-link
    no-shadow=""
    style=""
    url="http://pega.com"
  >
    <!---->
    
      
  </bolt-link>
  <a
    class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
    href="http://pega.com"
    style=""
    target="_self"
  >
    <!---->
    <!---->
    <slot
      name="before"
      style=""
    />
    <!---->
    <span
      class="c-bolt-link__text"
      style=""
    >
      <!---->
      <!---->
      This is a link
      <!---->
      <!---->
    </span>
    <!---->
    <slot
      name="after"
      style=""
    />
    <!---->
    <!---->
  </a>
  
    
  <!---->
</div>
`;

exports[`link Default <bolt-link> with Shadow DOM renders 1`] = `
<a href="http://pega.com"
   class="c-bolt-link c-bolt-link--display-inline c-bolt-link--valign-center"
   target="_self"
>
  <slot name="before">
  </slot>
  <span class="c-bolt-link__text">
    <slot>
    </slot>
  </span>
  <slot name="after">
  </slot>
</a>
`;

exports[`link Default <bolt-link> with Shadow DOM renders 2`] = `
<bolt-link url="http://pega.com">
  Link Test -- Outer HTML
</bolt-link>
`;

exports[`link Default <bolt-link> with Shadow DOM renders with no extra whitespace 1`] = `
<div>
  (
  <bolt-link url="http://pega.com">
    Link Test -- No extra whitespace
  </bolt-link>
  )
</div>
`;

exports[`link Default <bolt-link> with Shadow DOM renders with no extra whitespace 3`] = `
<div
  style=""
>
  (
  <bolt-link
    style=""
    url="http://pega.com"
  >
    Link Test -- No extra whitespace
  </bolt-link>
  )
</div>
`;

exports[`link Link with an onClick attributes renders properly 1`] = `
<bolt-link display="inline"
           valign="center"
           on-click="on-click-test"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
     on-click="on-click-test"
  >
    <replace-with-children class="c-bolt-link__text">
      Link w/ onClick via attributes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with an onClick param renders properly 1`] = `
<bolt-link display="inline"
           valign="center"
           on-click="on-click-test"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with onClick via param
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with c-bolt- class is thrown out 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer JS-prefixed class
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with inner classes via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center is-active"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with inner classes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with outer JS-class via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
           class="js-click-me"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer JS-prefixed class
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link Link with outer classes via Drupal Attributes 1`] = `
<bolt-link display="inline"
           valign="center"
           class="u-bolt-padding-medium"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Link with outer classes
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link basic link 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link display: block 1`] = `
<bolt-link display="block"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-block c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link display: flex 1`] = `
<bolt-link display="flex"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-flex c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link display: inline 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link valign: center 1`] = `
<bolt-link display="inline"
           valign="center"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-center"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;

exports[`link link valign: start 1`] = `
<bolt-link display="inline"
           valign="start"
>
  <a is="shadow-root"
     class="c-bolt-link  c-bolt-link--display-inline c-bolt-link--valign-start"
  >
    <replace-with-children class="c-bolt-link__text">
      Hello World
    </replace-with-children>
  </a>
</bolt-link>
`;
